# django-waffle

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  RELEASING.rst  fabfile.py  manage.py  pyproject.toml  requirements.txt  run.py  run.sh  setup.cfg  setup.py  tasks.py  test_settings.py  tox.ini  travis.txt  travis_jinja.txt
.circleci/: config.yml
.github/: dependabot.yml  stale.yml
.github/workflows/: python-package.yml
.tx/: config
docs/: Makefile  commandline.rst  conf.py  contributing.rst  index.rst  installation.rst  testing-waffles.rst  types.rst  usage.rst
docs/about/: contributing.rst  goals.rst  roadmap.rst  why-waffle.rst
docs/starting/: configuring.rst  index.rst  installation.rst  requirements.rst  upgrading.rst
docs/testing/: automated.rst  index.rst  user.rst
docs/types/: flag.rst  index.rst  sample.rst  switch.rst
docs/usage/: cli.rst  custom_models.rst  decorators.rst  helpers.rst  index.rst  javascript.rst  json.rst  mixins.rst  templates.rst  views.rst
examples/django-waffle-project/: settings.py
requirements/: test.txt
test_app/: models.py  urls.py  views.py
test_app/migrations/: 0001_initial.py  0002_auto_20220717_1934.py
test_app/templates/: django.html  django_email.html  jingo.html
test_app/templates/django/: django.html  django_email.html
test_app/templates/jingo/: jingo.html
waffle/: .flake8  __init__.py  admin.py  apps.py  callables.py  compat.py  customsegment.py  decorators.py  defaults.py  forms.py  helpers.py  jinja.py  managers.py  middleware.py  mixins.py  models.py  settings.py  signals.py  testutils.py  urls.py  utils.py  views.py
waffle/locale/cs/LC_MESSAGES/: django.mo  django.po
waffle/locale/en_US/LC_MESSAGES/: django.mo  django.po
waffle/locale/it/LC_MESSAGES/: django.mo  django.po
waffle/locale/ru/LC_MESSAGES/: django.mo  django.po
waffle/management/commands/: flag.py  sample.py  switch.py  waffle_delete.py  waffle_delete_unused.py  waffle_flag.py  waffle_sample.py  waffle_switch.py
waffle/migrations/: 0001_initial.py  0002_auto_20150721_1437.py  0002_auto_20160323_0812.py  0002_auto_20161201_0958.py  0002_auto__add_sample.py  0002_delete_flag_model.py  0002_flag_organizations.py  0002_flag_sessions.py  0003_auto__add_field_flag_note__add_field_switch_note__add_field_sample_not.py  0003_flag_allow_override.py  0003_update_strings_for_i18n.py  0004_auto_flag_switch_category.py  0004_delete_flag.py  0005_add_flag_dates.py  0005_auto__add_field_flag_created__add_field_flag_modified.py  0006_auto__add_field_switch_created__add_field_switch_modified__add_field_s.py  0007_auto__chg_field_flag_created__chg_field_flag_modified__chg_field_switc.py  0008_auto__add_field_flag_languages.py  0009_auto__add_field_flag_custom_segment.py  0009_auto__add_field_flag_useragents.py
waffle/south_migrations/: 0001_initial.py  0004_auto__add_field_flag_testing.py  0005_auto__add_field_flag_created__add_field_flag_modified.py  0009_auto__add_field_flag_active_for_cookie__add_field_flag_active_cookie_n.py  0009_auto__add_field_flag_site__del_unique_flag_name__add_unique_flag_name_.py  0009_auto__add_sessionkv.py
waffle/templates/waffle/: waffle.js
waffle/templatetags/: jinja_waffle_tags.py  waffle.py  waffle_tags.py
waffle/tests/: base.py  test_admin.py  test_decorators.py  test_helpers.py  test_management.py  test_middleware.py  test_mixin.py  test_mixins.py  test_models.py  test_site_flag.py  test_sites.py  test_templates.py  test_testutils.py  test_utils.py  test_views.py  test_waffle.py
